Documented Images FromUser endpoint
